layout issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body{
     margin : 0px;
     overflow:auto;
+    height:100%;
 }
 h1{
     text-align : center;
